<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legado.app.lib.prefs.ThemePreviewPreference
        android:key="themePreview"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false" />

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="colorSchemeCategory"
        android:title="@string/theme_group_color_scheme"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false">

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="wallpaperFollow"
            android:summary="@string/wallpaper_follow_s"
            android:title="@string/wallpaper_follow" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:dependency="wallpaperFollow"
            android:key="wallpaperAutoUpdate"
            android:summary="@string/wallpaper_auto_update_s"
            android:title="@string/wallpaper_auto_update" />

        <io.legado.app.lib.prefs.PresetThemesPreference
            android:key="presetThemes"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="customColorConfig"
            android:summary="@string/theme_custom_color_summary"
            android:title="@string/theme_custom_color" />

        <io.legado.app.lib.prefs.Preference
            android:key="themeList"
            android:summary="@string/theme_list_summary"
            android:title="@string/theme_list"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="displayCategory"
        android:title="@string/theme_group_display"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false">

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="transparentStatusBar"
            android:summary="@string/status_bar_immersion"
            android:title="@string/immersion_status_bar" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="transparentActionBar"
            android:summary="@string/action_bar_immersion"
            android:title="@string/immersion_action_bar" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="immNavigationBar"
            android:summary="@string/imm_navigation_bar_s"
            android:title="@string/imm_navigation_bar" />

        <io.legado.app.lib.prefs.Preference
            android:key="barElevation"
            android:summary="@string/bar_elevation_s"
            android:title="@string/bar_elevation" />

        <io.legado.app.lib.prefs.Preference
            android:key="globalFont"
            android:summary="@string/default_font"
            android:title="@string/global_font"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="fontScale"
            android:summary="@string/font_scale_summary"
            android:title="@string/font_scale"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="elementsCategory"
        android:title="@string/theme_group_elements"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false">

        <io.legado.app.lib.prefs.IconListPreference
            android:defaultValue="ic_launcher"
            android:entries="@array/icon_names"
            android:entryValues="@array/icons"
            android:key="launcherIcon"
            android:summary="@string/change_icon_summary"
            android:title="@string/change_icon"
            app:icons="@array/icons" />

        <io.legado.app.lib.prefs.Preference
            android:key="welcomeStyle"
            android:summary="@string/welcome_style_summary"
            android:title="@string/welcome_style" />

        <io.legado.app.lib.prefs.Preference
            android:key="coverConfig"
            android:summary="@string/cover_config_summary"
            android:title="@string/cover_config" />

        <io.legado.app.lib.prefs.Preference
            android:key="bottomBarSkin"
            android:summary="@string/bottom_bar_skin_summary"
            android:title="@string/bottom_bar_skin"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>
