<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="showWelcome"
        android:summary="@string/show_welcome_summary"
        android:title="@string/show_welcome"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:dependency="showWelcome"
        android:key="customWelcome"
        android:summary="@string/custom_welcome_summary"
        android:title="@string/custom_welcome"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false" />

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="dayThemeCategory"
        android:dependency="showWelcome"
        android:title="@string/day"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false">

        <io.legado.app.lib.prefs.Preference
            android:key="welcomeImagePath"
            android:title="@string/background_image"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="welcomeShowText"
            android:summary="@string/welcome_text"
            android:title="@string/show_welcome_text"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="welcomeShowIcon"
            android:summary="@string/show_default_book_icon"
            android:title="@string/show_icon"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="nightThemeCategory"
        android:dependency="showWelcome"
        android:title="@string/night"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false">

        <io.legado.app.lib.prefs.Preference
            android:key="welcomeImagePathDark"
            android:title="@string/background_image"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="welcomeShowTextDark"
            android:summary="@string/welcome_text"
            android:title="@string/show_welcome_text"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="true"
            android:key="welcomeShowIconDark"
            android:summary="@string/show_default_book_icon"
            android:title="@string/show_icon"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>