<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/vw_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            app:skin_background="themePrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="?attr/actionBarStyle"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/speak_engine"
            app:titleTextAppearance="@style/ToolbarTitle" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/space_s"
            android:paddingBottom="@dimen/space_m"
            android:clipToPadding="false"
            android:overScrollMode="ifContentScrolls">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/space_l">

                <io.legado.app.ui.widget.text.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name">

                    <io.legado.app.lib.theme.view.ThemeEditText
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </io.legado.app.ui.widget.text.TextInputLayout>

                <include
                    android:id="@+id/field_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    layout="@layout/view_code_edit_field" />

                <include
                    android:id="@+id/field_content_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    layout="@layout/view_code_edit_field" />

                <include
                    android:id="@+id/field_concurrent_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    layout="@layout/view_code_edit_field" />

                <include
                    android:id="@+id/field_login_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    layout="@layout/view_code_edit_field" />

                <include
                    android:id="@+id/field_login_ui"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    layout="@layout/view_code_edit_field" />

                <include
                    android:id="@+id/field_login_check_js"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    layout="@layout/view_code_edit_field" />

                <io.legado.app.ui.widget.text.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    android:hint="段落间隔(毫秒)">

                    <io.legado.app.lib.theme.view.ThemeEditText
                        android:id="@+id/tv_pause_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </io.legado.app.ui.widget.text.TextInputLayout>

                <include
                    android:id="@+id/field_headers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    layout="@layout/view_code_edit_field" />

                <include
                    android:id="@+id/field_js_lib"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    layout="@layout/view_code_edit_field" />

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_s"
                    app:flexWrap="wrap">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/cb_is_enable_cookie"
                        style="@style/Widget.App.Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/auto_save_cookie" />
                </com.google.android.flexbox.FlexboxLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</FrameLayout>
